--- a/middleware/src/main/resources/static/partials/register.html
+++ b/middleware/src/main/resources/static/partials/register.html
@@ -14,19 +14,19 @@
       </div>
       <div class="form-group">
         <label class="text-normal text-dark">Username</label>
-        <input type="text" class="form-control" Placeholder='John Doe'>
+        <input type="text" class="form-control" ng-model="userInfo.userName" Placeholder='John Doe'>
       </div>
       <div class="form-group">
         <label class="text-normal text-dark">Email Address</label>
-        <input type="email" class="form-control" Placeholder='name@email.com'>
+        <input type="email" class="form-control" ng-model="userInfo.email" Placeholder='name@email.com'>
       </div>
       <div class="form-group">
         <label class="text-normal text-dark">Password</label>
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" ng-model="userInfo.password" placeholder="Password">
       </div>
       <div class="form-group">
         <label class="text-normal text-dark">Confirm Password</label>
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" ng-model="userInfo.repassword" placeholder="Password">
       </div>
       <div class="form-group center">
         <button class="btn btn-primary">Register</button>
