--- a/middleware/src/main/resources/static/partials/login.html
+++ b/middleware/src/main/resources/static/partials/login.html
@@ -1,8 +1,8 @@
 <div class="peers ai-s fxw-nw h-100vh">
-  <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("img/bg.jpg")'>
+  <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("middleware/img/bg.jpg")'>
     <div class="pos-a centerXY">
       <div class="bgc-white bdrs-50p pos-r" style='width: 120px; height: 120px;'>
-        <img class="pos-a centerXY" style='height: 50px;' src="img/icons/logo.png" alt="">
+        <img class="pos-a centerXY" style='height: 50px;' src="middleware/img/icons/logo.png" alt="">
       </div>
     </div>
   </div>
