--- a/middleware/src/main/resources/templates/error.html
+++ b/middleware/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width"> <!-- Forcing initial-scale shouldn't be necessary -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
     <meta name="x-apple-disable-message-reformatting">  <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title>500</title>
+    <title>Error</title>
 
     <style>
       body {
@@ -90,10 +90,10 @@
   </head>
   <body>
     <div class="email-content">
-      <h5>Title</h5>
-      <h1 class="mB-30 fw-900 lh-1" style="font-size: 35px;color: #f44336;">error type</h1>
-      <h3 class="mB-10 fsz-lg c-grey-900 fw-700 tt-c">id info</h3>
-      <p class="mB-30 fsz-def c-grey-700">error message</p>
+      <h5></h5>
+      <h1 class="mB-30 fw-900 lh-1" style="font-size: 35px;color: #f44336;">error</h1>
+      <h3 class="mB-10 fsz-lg c-grey-900 fw-700 tt-c">${token}</h3>
+      <p class="mB-30 fsz-def c-grey-700">${message}</p>
         <a href="{{goToUrl}}" class="go-btn">Go to web page</a>
     </div>
   </body>
