--- a/middleware/src/main/resources/static/partials/home.html
+++ b/middleware/src/main/resources/static/partials/home.html
@@ -10,7 +10,7 @@
               <div class="peers ai-c fxw-nw">
                 <div class="peer">
                   <div class="logo" style="height: 65px;">
-                    <img style="width: 65px; margin-top: 10px;" src="middleware/img/icons/logo.png" alt="">
+                    <img style="width: 65px; margin-top: 10px;" src="img/icons/logo.png" alt="">
                   </div>
                 </div>
                 <div class="peer peer-greed">
