--- a/middleware/src/main/resources/templates/index.html
+++ b/middleware/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
-  <link rel="icon" type="image/png" href="/middleware/img/icons/favicon.ico"/>
-  <link rel="stylesheet" href="/middleware/lib/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/middleware/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/middleware/fonts/iconic/css/material-design-iconic-font.min.css">
-  <link rel="stylesheet" type="text/css" href="/middleware/css/index.css">
+  <link rel="icon" type="image/png" href="/img/icons/favicon.ico"/>
+  <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/fonts/iconic/css/material-design-iconic-font.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
 
   <base href="/">
 </head>
@@ -19,26 +19,26 @@
   <div ui-view></div>
 </body>
 
-<script src="/middleware/lib/angular/angular.min.js"></script>
-<script src="/middleware/lib/angular/angular-ui-router.min.js"></script>
-<script src="/middleware/lib/angular/angular-cookies.min.js"></script>
-<script src="/middleware/lib/angular/angular-resource.min.js"></script>
+<script src="/lib/angular/angular.min.js"></script>
+<script src="/lib/angular/angular-ui-router.min.js"></script>
+<script src="/lib/angular/angular-cookies.min.js"></script>
+<script src="/lib/angular/angular-resource.min.js"></script>
 
-<script src="/middleware/lib/tools/moment.js"></script>
-<script src="/middleware/lib/tools/highcharts.js"></script>
-<script src="/middleware/lib/tools/exporting.js"></script>
-<script src="/middleware/lib/tools/export-data.js"></script>
+<script src="/lib/tools/moment.js"></script>
+<script src="/lib/tools/highcharts.js"></script>
+<script src="/lib/tools/exporting.js"></script>
+<script src="/lib/tools/export-data.js"></script>
 
-<script src="/middleware/lib/jquery/dist/jquery.min.js"></script>
-<script src="/middleware/lib/jquery/dist/jquery.dataTables.min.js"></script>
-<script src="/middleware/lib/jquery/dist/jquery.easypiechart.min.js"></script>
-<script src="/middleware/lib/popper.js/dist/umd/popper.min.js"></script>
-<script src="/middleware/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/lib/jquery/dist/jquery.min.js"></script>
+<script src="/lib/jquery/dist/jquery.dataTables.min.js"></script>
+<script src="/lib/jquery/dist/jquery.easypiechart.min.js"></script>
+<script src="/lib/popper.js/dist/umd/popper.min.js"></script>
+<script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="/middleware/js/services.js"></script>
-<script src="/middleware/js/directives.js"></script>
-<script src="/middleware/js/filters.js"></script>
-<script src="/middleware/js/app.js"></script>
-<script src="/middleware/js/controllers.js"></script>
+<script src="/js/services.js"></script>
+<script src="/js/directives.js"></script>
+<script src="/js/filters.js"></script>
+<script src="/js/app.js"></script>
+<script src="/js/controllers.js"></script>
 
 </html>
