--- a/middleware/src/main/resources/static/partials/home-policy_list-policy_detail.html
+++ b/middleware/src/main/resources/static/partials/home-policy_list-policy_detail.html
@@ -55,6 +55,56 @@
         </div>
       </div>
   	</div>
+    <div class="col-md-12 mB-20">
+      <h6 class="c-grey-900 mB-20">Alert Setting</h6>
+      <div class="col-md-6">
+        <h6 class="c-grey-900 mB-20 center">Social Accounts</h6>
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.socialAccount.facebook" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Facebook</span>
+          </label>
+        </div>
+
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.socialAccount.twitter" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Twitter</span>
+          </label>
+        </div>
+
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.socialAccount.instagram" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Instagram</span>
+          </label>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <h6 class="c-grey-900 mB-20 center">Alert Methods</h6>
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.alertMethod.email" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Email</span>
+          </label>
+        </div>
+
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.alertMethod.text" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Text</span>
+          </label>
+        </div>
+
+        <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+          <input type="checkbox" ng-model="alertSetting.alertMethod.phone" class="peer">
+          <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+            <span class="peer peer-greed">Phone</span>
+          </label>
+        </div>
+      </div>
+    </div>
     <div class="col-md-12">
       <div class="bgc-white bd bdrs-3 p-20 mB-20">
         <h6 class="c-grey-900 mB-20">Rules List</h6>
