Update product name

--- a/middleware/src/main/resources/static/partials/home.html
+++ b/middleware/src/main/resources/static/partials/home.html
@@ -14,7 +14,7 @@
                   </div>
                 </div>
                 <div class="peer peer-greed">
-                  <h5 class="lh-1 mB-0 logo-text p-left-30">S N P</h5>
+                  <h5 class="lh-1 mB-0 logo-text p-left-30">Socidia</h5>
                 </div>
               </div>
             </a>
@@ -88,7 +88,7 @@
           </li>
         </ul>
           <div style="position: absolute; left: 50%;">
-          <h5 class="mB-5 c-grey-900" style="position: relative; left: -50%; top: 15px;">Social Network Protection Admin</h5>
+          <h5 class="mB-5 c-grey-900" style="position: relative; left: -50%; top: 15px;">Socidia Admin</h5>
           </div>
         <ul class="nav-right">
           <li class="dropdown">
@@ -127,7 +127,7 @@
 
     <!-- ### $App Screen Footer ### -->
     <footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600">
-      <span>SNP © 2018 Social Network Protection Framework Admin</span>
+      <span>Socidia © 2019</span>
     </footer>
   </div>
 </div>
