--- a/middleware/src/main/resources/templates/index.html
+++ b/middleware/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="scd">
 <head>
   <meta charset="UTF-8">
-  <title>Social Network Protection</title>
+  <title>Socidia</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
