--- a/middleware/src/main/resources/static/partials/home.html
+++ b/middleware/src/main/resources/static/partials/home.html
@@ -48,11 +48,11 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="sidebar-link ng-class:{'active' : $state.current.name.indexOf('alert_list') >= 0}" ui-sref=".alert_list">
+          <a class="sidebar-link ng-class:{'active' : $state.current.name.indexOf('item_list') >= 0}" ui-sref=".item_list">
             <span class="icon-holder">
               <i class="c-deep-purple-500 ti-view-list-alt"></i>
             </span>
-            <span class="title">Alert List</span>
+            <span class="title">Item List</span>
           </a>
         </li>
         <li class="nav-item dropdown">
