--- a/middleware/src/main/resources/templates/email.html
+++ b/middleware/src/main/resources/templates/email.html
@@ -341,7 +341,7 @@
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p th:text="'Hi ' + ${username}">,</p>
+                        <p th:text="'Hi ' + ${name}">,</p>
                         <p th:text="${message}"></p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
