--- a/middleware/src/main/resources/templates/success.html
+++ b/middleware/src/main/resources/templates/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8"> <!-- utf-8 works for most cases -->
     <meta name="viewport" content="width=device-width"> <!-- Forcing initial-scale shouldn't be necessary -->
@@ -90,10 +90,10 @@
   </head>
   <body>
     <div class="email-content">
-      <h1 class="mB-30 fw-900 lh-1" style="font-size: 35px;color: #007bff;">success</h1>
-      <h3 class="mB-10 fsz-lg c-grey-900 tt-c fw-700">Hi, ${email}</h3>
-      <p class="mB-30 fsz-def c-grey-700">${message}</p>
-        <a href="{{goToUrl}}" class="go-btn">go to home page</a>
+      <h1 class="mB-30 fw-900 lh-1" style="font-size: 35px;color: #007bff;">Congratulations!</h1>
+      <h3 class="mB-10 fsz-lg c-grey-900 tt-c fw-700" th:text="'Hi ' + ${username}"></h3>
+      <p class="mB-30 fsz-def c-grey-700" th:text="${message}"></p>
+        <a th:href="@{${link}}" class="go-btn">go to home page to login</a>
     </div>
   </body>
 </html>
