login & auth ongoing

--- a/middleware/src/main/resources/static/partials/link_accounts.html
+++ b/middleware/src/main/resources/static/partials/link_accounts.html
@@ -4,27 +4,27 @@
       <div class="bgc-white bdrs-50p pos-r">
         <img class="pos-r centerXY mB-20" style='height: 50px;' src="img/icons/logo.png" alt="">
 
-        <div class="col-md-12 c-grey-900 mB-20 center">Link Your Social Accounts</div>
+        <h5 class="col-md-12 c-grey-900 mB-20 center">Link Your Social Accounts</h5>
 
-        <div class="center mB-20">
-          <div class="checkbox checkbox-circle checkbox-info peers ai-c" style="display: inline-block !important; min-width: 100px;">
-            <input type="checkbox" ng-model="alertSetting.socialAccount.facebook" class="peer">
-            <label for="inputCall1" class=" peers peer-greed js-sb ai-c" style="padding: 0;">
-              <span class="peer peer-greed">Facebook</span>
+        <div class="mB-20" style="margin: auto; width: 120px;">
+          <div class="checkbox checkbox-circle checkbox-info peers ai-c mB-10">
+            <input type="checkbox" ng-model="socialAccount.facebook" class="peer">
+            <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+              <span class="peer peer-greed" style="font-size: 16px;">Facebook</span>
             </label>
           </div>
 
-          <div class="checkbox checkbox-circle checkbox-info peers ai-c" style="display: inline-block !important; min-width: 100px;">
-            <input type="checkbox" ng-model="alertSetting.socialAccount.twitter" class="peer">
-            <label for="inputCall1" class=" peers peer-greed js-sb ai-c" style="padding: 0;">
-              <span class="peer peer-greed">Twitter</span>
+          <div class="checkbox checkbox-circle checkbox-info peers ai-c mB-10">
+            <input type="checkbox" ng-model="socialAccount.twitter" class="peer">
+            <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+              <span class="peer peer-greed" style="font-size: 16px;">Twitter</span>
             </label>
           </div>
 
-          <div class="checkbox checkbox-circle checkbox-info peers ai-c" style="display: inline-block !important; min-width: 100px;">
-            <input type="checkbox" ng-model="alertSetting.socialAccount.instagram" class="peer">
-            <label for="inputCall1" class=" peers peer-greed js-sb ai-c" style="padding: 0;">
-              <span class="peer peer-greed">Instagram</span>
+          <div class="checkbox checkbox-circle checkbox-info peers ai-c">
+            <input type="checkbox" ng-model="socialAccount.instagram" class="peer">
+            <label for="inputCall1" class=" peers peer-greed js-sb ai-c">
+              <span class="peer peer-greed" style="font-size: 16px;">Instagram</span>
             </label>
           </div>
         </div>
@@ -32,28 +32,28 @@
         <div class="center">
           <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#linkModal" style="width: 100px; margin-top: 20px;">Link</button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-        <div class="modal fade" id="linkModal" tabindex="-1" role="dialog" aria-labelledby="linkModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="linkModalLabel">Confirm Your Linking</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>By clicking link, the following accounts will be linked</p>
-                <p>1</p>
-                <p>2</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="linkSocialAccounts()">Link</button>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="modal fade" id="linkModal" tabindex="-1" role="dialog" aria-labelledby="linkModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="linkModalLabel">Confirm Your Linking</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>By clicking link, the following accounts will be linked</p>
+        <p>1</p>
+        <p>2</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="linkSocialAccounts()">Link</button>
       </div>
     </div>
   </div>
