--- a/middleware/src/main/resources/static/partials/login.html
+++ b/middleware/src/main/resources/static/partials/login.html
@@ -36,12 +36,12 @@
         <div class="center">
           <button class="btn btn-primary" ng-click="login()">Login</button>
         </div>
+
+        
+        <div id="errorMess" class="alert alert-danger mT-20 display-none" role="alert">
+          {{errorMessage}}
+        </div>
       </div>
     </form>
   </div>
-</div>
-
-
-<div id="errorMess" class="alert alert-danger display-none" role="alert">
-	{{errorMessage}}
 </div>
