register login auth process done

--- a/middleware/src/main/resources/static/partials/link_accounts.html
+++ b/middleware/src/main/resources/static/partials/link_accounts.html
@@ -48,8 +48,7 @@
       </div>
       <div class="modal-body">
         <p>By clicking link, the following accounts will be linked</p>
-        <p>1</p>
-        <p>2</p>
+        <p>Facebook</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
