dashboard real data binding finished

--- a/middleware/src/main/resources/static/partials/home-dashboard.html
+++ b/middleware/src/main/resources/static/partials/home-dashboard.html
@@ -74,7 +74,7 @@
                 <div class="easy-pie-chart" data-size='80' data-percent="{{daily.rPassRate}}" data-bar-color='#2196f3'>
                   <span></span>
                 </div>
-                <h6 class="fsz-sm">Rules Trigger Rate</h6>
+                <h6 class="fsz-sm">Rules Pass Rate</h6>
               </div>
             </div>
           </div>
@@ -83,7 +83,11 @@
 
       <!-- high chart -->
       <div class="masonry-item col-md-12">
-        <div id="trendChart" class="trend-chart bd" style="height: 400px;"></div>
+        <div id="policyTrendChart" class="trend-chart bd" style="height: 400px;"></div>
+      </div>
+
+      <div class="masonry-item col-md-12">
+        <div id="ruleTrendChart" class="trend-chart bd" style="height: 400px;"></div>
       </div>
     </div>
   </div>
