--- a/middleware/src/main/resources/static/partials/home-policy_list-policy_detail.html
+++ b/middleware/src/main/resources/static/partials/home-policy_list-policy_detail.html
@@ -99,6 +99,70 @@
     <div class="col-md-12">
       <div class="bgc-white bd bdrs-3 p-20 mB-20">
         <h6 class="c-grey-900 mB-20">Rules List</h6>
+
+        <div class="add-new-rule">
+          <button type="button" class="btn cur-p btn-outline-primary" ng-click="showAddNew=!showAddNew">Add New</button>
+        </div>
+
+        <div ng-show="showAddNew">
+          <div class="masonry-item mB-20">
+            <div class="bgc-white p-20 bd">
+              <h6 class="c-grey-900">Add New Rule</h6>
+              <div class="mT-30">
+                <form>
+                  <div class="form-group">
+                    <label for="ruleName">Rule Name</label>
+                    <i class="text-danger ti-medall" data-toggle="tooltip" data-placement="right" title="Required Field"></i>
+                    <input id="ruleName" type="text" class="form-control" ng-model="ruleInfo.name" ng-focus="validation=true" placeholder="Enter Rule Name">
+                    <!--<small id="policyHelp" class="form-text text-muted">Corresponding to ...</small>-->
+                  </div>
+
+                  <div class="form-group">
+                    <label for="ruleContent">Rule Content</label>
+                    <i class="text-danger ti-medall" data-toggle="tooltip" data-placement="right" title="Required Field"></i>
+                    <input id="ruleContent" type="text" class="form-control" ng-model="ruleInfo.content" ng-focus="validation=true" placeholder="Enter Rule Content">
+                    <!--<small id="policyHelp" class="form-text text-muted">Corresponding to ...</small>-->
+                  </div>
+                  
+                  <div id="alertMess" ng-show="!validation" class="alert alert-warning" role="alert">
+                    {{alertMessage}}
+                  </div>
+                  <div id="errorMess" class="alert alert-danger display-none" role="alert">
+                    {{errorMessage}}
+                  </div>
+                  <div id="successMess" class="alert alert-primary display-none" role="alert">
+                    {{successMessage}}
+                  </div>
+                  <div>
+                    <button type="button" class="btn cur-p btn-outline-primary" ng-click="showAddNew=!showAddNew">Close</button>
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addRuleModal">Submit</button>
+                  </div>
+                  <div class="modal fade" id="addRuleModal" tabindex="-1" role="dialog" aria-labelledby="addRuleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="addRuleModalLabel">Add New Rule</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <p>Confirm to add the following rule: </p>
+                          <p>Rule Name: {{ruleInfo.name}}</p>
+                          <p>Rule Content: {{ruleInfo.content}}</p>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addNewRule()">Submit</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
         
         <table id="hostsDataTable" class="table table-bordered ta-c" cellspacing="0" width="100%">
             <thead class="thead-dark">
