--- a/middleware/src/main/resources/static/partials/home-policy_list.html
+++ b/middleware/src/main/resources/static/partials/home-policy_list.html
@@ -61,7 +61,7 @@
       <div class="col-md-12">
         <div class="bgc-white bd bdrs-3 p-20 mB-20">
           
-          <table id="buildsDataTable" class="table table-bordered " cellspacing="0" width="100%">
+          <table id="policyListDataTable" class="table table-bordered " cellspacing="0" width="100%">
             <thead class="thead-dark">
               <tr>
                 <th>Policy ID</th>
